# Autonome-Agent

./: .gitignore  .replit  app.js  package.json  pnpm-lock.yaml  pyproject.toml  replit.md  start.sh
.agents/memory/: MEMORY.md
artifacts/api-server/: build.mjs  package.json
artifacts/api-server/src/: app.ts
artifacts/api-server/src/routes/: ab-tests.ts  accounts.ts  ai.ts  analytics.ts  auth.ts  auto-join.ts  campaigns.ts  channels.ts  client-portals.ts  communities.ts  delay.ts  escalations.ts  flood.ts  groups.ts  index.ts  leads.ts  memories.ts  messages.ts  monitoring.ts  notifications.ts  proxies.ts  schedules.ts  security.ts  settings.ts  warmup.ts
artifacts/dashboard/: index.html  vite.config.ts
artifacts/dashboard/.replit-artifact/: artifact.toml
artifacts/dashboard/src/: App.tsx  index.css
artifacts/dashboard/src/context/: AuthContext.tsx
artifacts/dashboard/src/pages/: ABTesting.tsx  AIEngine.tsx  Accounts.tsx  Analytics.tsx  AutoJoin.tsx  Campaigns.tsx  Channels.tsx  ClientPortal.tsx  ClientsManager.tsx  CommunityManager.tsx  Dashboard.tsx  Escalations.tsx  FloodTracker.tsx  Groups.tsx  HumanDelay.tsx  LeadFunnel.tsx  Login.tsx  (+9 more)
lib/api-spec/: openapi.yaml
lib/db/src/: index.ts
python-backend/: human_delay_engine.py  main.py  requirements.txt  test_all.py  test_trust.py
python-backend/bot/: ab_content.py  autonomous.py  commands.py  community_intel.py  content_gen.py  human_ai.py  keyboards.py  notifications.py  personality.py  realtime_intel.py  reports.py  rich_content.py  runner.py  scheduler_config.py  trust_checker.py  utils.py
(+24 files in other folders)
