[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "openai>=2.41.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "telethon>=1.43.2",
    "uvicorn>=0.49.0",
]
