[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "openai>=2.41.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-telegram-bot[job-queue]>=21.0",
    "telethon>=1.43.2",
    "uvicorn>=0.49.0",
]
